# R2

./: .env.example  .gitattributes  .gitignore  0.3.1  alice.py  alpha_module.py  animations_system.py  aplicar_patch_v9.py  apply_patches.py  atualizacao.txt  calculator.py  check_and_launch.py  check_gui.py  cli.py  colab.py  collab.py  config.json  converter.py  debug_kokoro.py  deepseek_python_20251223_0ae580.py  download_noaa_updates.py  editor_code.py  environment.yml  estrutura.txt  extract_video_info.py  final_ghost_resurrection.py  fix_audio.py  fix_download.py  fix_installation.py  fix_module_names.py  fix_r2_logic.py  fix_voices.py  force_sci_fi_gui.py  gerar_voz.py  image_gen_config.json  index.html  init.py  install_dependencies.py  install_noaa_updates.py  install_noaa_updates_fixed.py  (+69 more)
backup/: main.py  main2.py
backup_patch_v9_20260421_085204/: app.js  astro_defense.py  pizzint_service.py  video_ops.py  volcano_monitor.py
broker10_profile/: Last Browser  Local State
commands/: __init__.py  basic_commands.py  commands.txt  crypto_commands.py  system_commands.py  web_commands.py
config/: settings.py
core/: audio_processor.py  command_system.py  config.py  fallbacks.py  history_manager.py  language_model.py  long_term_memory.py  module_manager.py  persona.py  voice_engine.py  vosk_engine.py
data/: config.json  modules.json  permanent_memory.json
features/: air_traffic.py  astro_timelapse.py  broker_operator.py  ear_system.py  eu.py  geo_seismic.py  geopolitics.py  image_gen.py  intel_war.py  liveuamap_intel.py  local_brain.py  market_system.py  (+19 more)
(+1208 files in other folders)
