[metadata]
name = r2-assistant
version = 1.0.0
author = R2 Assistant Team
author_email = team@r2-assistant.dev
description = Sistema de Assistência IA com Interface Sci-Fi/HUD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seu-usuario/r2-assistant
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    python-dotenv>=1.0.0
    pyyaml>=6.0
    psutil>=5.9.0
    requests>=2.31.0
    aiohttp>=3.8.0
    colorama>=0.4.6
    tqdm>=4.66.0
    click>=8.1.0
    loguru>=0.7.0

[options.extras_require]
gui =
    customtkinter>=5.2.0
    pillow>=10.0.0
voice =
    SpeechRecognition>=3.10.0
    pyttsx3>=2.90
trading =
    ccxt>=4.0.0
    yfinance>=0.2.28
    pandas>=2.0.0
    numpy>=1.24.0
ai =
    transformers>=4.35.0
    torch>=2.0.0
    scikit-learn>=1.3.0
dev =
    pytest>=7.4.0
    black>=23.0.0
    flake8>=6.0.0

[options.entry_points]
console_scripts =
    r2-assistant = r2_assistant.cli:main